<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="_7_min">7 minutes workout image.</string>
    <string name="start">Start</string>
    <string name="get_ready">GET READY FOR</string>
    <string name="workout_model_images">workout model images</string>
    <string name="end">END</string>
    <string name="finish">FINISH</string>
    <string name="conga">Congratulations!\nYou have done the workout!</string>
    <string name="image">image</string>
    <string name="calculator">Calculator</string>
    <string name="history">History</string>
    <string name="bmi">BMI</string>
    <string name="editText_weight_hint">Weight (in kg)</string>
    <string name="editText_height_hint">Height (in cm)</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
</resources>