<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFinish"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivCircle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:src="" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="@string/conga"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

</LinearLayout>