<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_wlc_page"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/_7_min"
        android:src="@drawable/img_main_page"
        app:layout_constraintBottom_toTopOf="@id/fl_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_wlc_page">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_size_btn"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llBottomButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/llBMIView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fl_bmiCalculator"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:background="@drawable/item_circular_color_accent_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bmi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_size_btn"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/calculator"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_text_size_btn"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHistoryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flHistory"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:background="@drawable/item_circular_color_accent_background">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_calendar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_size_btn"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/history"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_text_size_btn"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>