<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiCalculator">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMICalculator"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBMICalculator"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_weight_hint"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_height_hint"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilMetricUnitHeight"
        android:layout_margin="20dp"
        android:gravity="center"
        tools:text="BMI" />

    <Button
        android:id="@+id/btnBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBmi"
        android:layout_margin="10dp"
        android:text="@string/calculate" />

</RelativeLayout>